src/objects/Co_Op_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Partner_Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Approved_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reimbursement Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Activity_Approved_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Approved date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Awaiting_reimbursement_Amount__c</fullName>
        <label>Activity Awaiting reimbursement Amount</label>
        <summarizedField>Claim__c.Amount_Pending_for_Reimbursement__c</summarizedField>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Activity_Expire_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Number__c</fullName>
        <displayFormat>A{000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Activity_Open_Approved_Amount__c</fullName>
        <formula>If(
OR(ISPICKVAL(Activity_Status__c, &apos;Claimed&apos;),
ISPICKVAL(Activity_Status__c, &apos;Claimable&apos;),
ISPICKVAL(Activity_Status__c, &apos;Approved&apos;)
),
(Claims_Paid_Amount__c + Activity_Awaiting_reimbursement_Amount__c),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Open Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Activity_Path_Status__c</fullName>
        <defaultValue>&apos;new&apos;</defaultValue>
        <label>Activity Path Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approval Level 1</fullName>
                </value>
                <value>
                    <fullName>Approval Level 2</fullName>
                </value>
                <value>
                    <fullName>Approval Level 3</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Claimable</fullName>
                </value>
                <value>
                    <fullName>Claimed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired/Rejected/Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <label>Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Claimable</fullName>
                </value>
                <value>
                    <fullName>Claimed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Collateral (Co-branded Brochures, Data Sheets, etc.)</fullName>
                </value>
                <value>
                    <fullName>Demonstration Equipment</fullName>
                </value>
                <value>
                    <fullName>Direct Mail / E-mail Campaign / Newsletter</fullName>
                </value>
                <value>
                    <fullName>Funded Head (Consultant / System Architect)</fullName>
                </value>
                <value>
                    <fullName>Funded Head (Sales Champion)</fullName>
                </value>
                <value>
                    <fullName>Participation in IT, Applications and/or Telecoms Event</fullName>
                </value>
                <value>
                    <fullName>Participation in Nokia Event (i.e. Nokia Partner Conference)</fullName>
                </value>
                <value>
                    <fullName>Promotional Items (Co- branded)</fullName>
                </value>
                <value>
                    <fullName>Public Relations / Press Release</fullName>
                </value>
                <value>
                    <fullName>Sales Incentive Program (Partner Run)</fullName>
                </value>
                <value>
                    <fullName>Seminars &amp; Road Shows (Partner developed and/or sponsored)</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Trade Shows</fullName>
                </value>
                <value>
                    <fullName>Training(sales, pre-sales and post-sales)</fullName>
                </value>
                <value>
                    <fullName>Web Marketing and Development (Website / Microsite)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not in Approval</fullName>
                    <default>true</default>
                    <label>Not in Approval</label>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_claim_submitted__c</fullName>
        <label>Approved claim submitted</label>
        <summarizedField>Claim__c.Activity_Claim_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>equals</operation>
            <value>Submitted, Incomplete, Escalated</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approver_Level_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Level 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Co_Op_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Level 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Co_Op_Activity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Level 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Co_Op_Activity2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Reject_By_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Reject By System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Amount_Pending_Audit__c</fullName>
        <label>Claim Amount Pending Audit</label>
        <summarizedField>Claim__c.Activity_Claim_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>equals</operation>
            <value>Claimable, Submitted, Incomplete</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claim_Due_By__c</fullName>
        <formula>IF((INCLUDES(Exception__c, &apos;Activity Start Date occurred in the past&apos;)), (Activity_Approved_date__c + 30), (End_Date__c + 60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Due By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_count_for_cancellation__c</fullName>
        <label>Claim count for cancellation</label>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Claimable, Created</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claims_Paid_Amount__c</fullName>
        <description>Sum of claims paid with credit memo numbers</description>
        <label>Claims Paid Amount</label>
        <summarizedField>Claim__c.Reimbursed_Amount_Claim_Paid_Amount__c</summarizedField>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claims_Passed_Audit_Amount__c</fullName>
        <label>Claims Passed Audit Amount</label>
        <summarizedField>Claim__c.Claim_Amount_Passed_Audit__c</summarizedField>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claims_Submitted_Amount__c</fullName>
        <label>Claims Submitted Amount</label>
        <summarizedField>Claim__c.Activity_Claim_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>equals</operation>
            <value>Submitted, Incomplete, Escalated</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Internal Comments</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Activity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost of Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT( Partner_Account__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <description>(22.4) PRM Fund Current Balance</description>
        <formula>Fund_Id__r.Current_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fund Current Balance</inlineHelpText>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Events</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of the Activity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please add any other details that would help the Approver(s) approve the request.</inlineHelpText>
        <label>Exception Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel: transport fares (air, train or taxi), car rental and parking</fullName>
                </value>
                <value>
                    <fullName>Living: hotel expenses, food and beverage costs</fullName>
                </value>
                <value>
                    <fullName>Activity Start Date occurred in the past</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Id__c</fullName>
        <label>Fund Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Main Funds can be linked to Activities.</errorMessage>
            <filterItems>
                <field>Fund__c.PRM_Main_Fund__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Co-op Activities</relationshipLabel>
        <relationshipName>Co_Op_Activity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HFLOF_Amount__c</fullName>
        <label>HFLOF Amount</label>
        <summarizedField>Claim__c.HFLOF_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>equals</operation>
            <value>HFLOF</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>If_Other_Exception_Please_Specify__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other Exception, Please Specify</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Email__c</fullName>
        <formula>LastModifiedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified by Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Partner_Account__r.Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnHold_Reimbursement_Amount__c</fullName>
        <label>OnHold Reimbursement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Hold_Approver_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Hold Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Co_Op_Activity_approver_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Hold_Approver_email__c</fullName>
        <formula>On_Hold_Approver_del__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Hold Approver email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>On Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRM_Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Activity Postponed</fullName>
                </value>
                <value>
                    <fullName>Activity Cancelled</fullName>
                </value>
                <value>
                    <fullName>Decided not to participate at this time</fullName>
                </value>
                <value>
                    <fullName>Fund Reallocation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRM_Other_Cancellation_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Co-op Activities</relationshipLabel>
        <relationshipName>Co_Op_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_level_approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous level approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Co_Op_Activity3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_level_approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous level approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Co_Op_Activity4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proof_of_Performance__c</fullName>
        <label>Proof of Performance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Itemized production and development invoices</fullName>
                </value>
                <value>
                    <fullName>URL of developed pages</fullName>
                </value>
                <value>
                    <fullName>Copy (text) of web pages developed</fullName>
                </value>
                <value>
                    <fullName>Itemized invoice(s) for training course fees</fullName>
                </value>
                <value>
                    <fullName>Copy of the Certificate of Completion OR</fullName>
                </value>
                <value>
                    <fullName>Attendee list provided and signed by Nokia instructor</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices showing total costs</fullName>
                </value>
                <value>
                    <fullName>Trade Show details incl. date(s)</fullName>
                </value>
                <value>
                    <fullName>Trade Show invitation sent by Partner (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Photo of booth with Nokia logo (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Number of booth visitors (if captured)</fullName>
                </value>
                <value>
                    <fullName>Copy of presentation/agenda with Nokia logo (if applicable)</fullName>
                </value>
                <value>
                    <fullName>If approved as exception, itemized travel and lodging invoices</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices from telemarketing agency incl. detailed costs</fullName>
                </value>
                <value>
                    <fullName>Call list of calls placed</fullName>
                </value>
                <value>
                    <fullName>Copy of call script</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices showing total costs of activity</fullName>
                </value>
                <value>
                    <fullName>Final copy of invitation and detailed agenda (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Copy of presentations featuring Nokia</fullName>
                </value>
                <value>
                    <fullName>List of attendees (if available)</fullName>
                </value>
                <value>
                    <fullName>Itemized 3rd party invoices</fullName>
                </value>
                <value>
                    <fullName>Itemized invoices for awards or names of award recipients</fullName>
                </value>
                <value>
                    <fullName>Awards won for SPIFFs</fullName>
                </value>
                <value>
                    <fullName>Copy of approved incentive rules</fullName>
                </value>
                <value>
                    <fullName>Point-of-Sale (POS) Report for Nokia products</fullName>
                </value>
                <value>
                    <fullName>Itemized production and publisher invoices</fullName>
                </value>
                <value>
                    <fullName>Distribution list and/or Run Report</fullName>
                </value>
                <value>
                    <fullName>Sample of PR/press release incl. publication date &amp; Nokia logo</fullName>
                </value>
                <value>
                    <fullName>Itemized production invoices</fullName>
                </value>
                <value>
                    <fullName>Digital image of promotional merchandise with Nokia logo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement_Amount_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reimbursement Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejection Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Activity Target Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business &amp; Professional Services</fullName>
                </value>
                <value>
                    <fullName>Cable MSO</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Education – Higher</fullName>
                </value>
                <value>
                    <fullName>Education – K – 12</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Large</fullName>
                    <isActive>false</isActive>
                    <label>Enterprise - Large</label>
                </value>
                <value>
                    <fullName>Enterprise - SMB</fullName>
                    <isActive>false</isActive>
                    <label>Enterprise - SMB</label>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government - Federal</fullName>
                    <isActive>false</isActive>
                    <label>Government - Federal</label>
                </value>
                <value>
                    <fullName>Government – Local and Provincial</fullName>
                </value>
                <value>
                    <fullName>Government – Public Safety &amp; Defense</fullName>
                    <isActive>false</isActive>
                    <label>Government – Public Safety &amp; Defense</label>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Highways</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Ports &amp; Airport</fullName>
                </value>
                <value>
                    <fullName>Public Safety</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Railways</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Service Providers</fullName>
                    <isActive>false</isActive>
                    <label>Service Providers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the Activity. Must be 15 Days after to todays date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the activity happened in past, please select the date in past and select the Exception as ‘Activity Start Date occurred in the Past</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Claim_Count__c</fullName>
        <label>Submitted Claim Count</label>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Submitted_Claim__c</fullName>
        <label>Total Submitted Claim</label>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>notEqual</operation>
            <value>Claimable, Expired</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>bypass_last_claim_validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bypass last claim validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>createdandclaimablecount__c</fullName>
        <description>Count for claim having status created or claimable</description>
        <label>created and claimable count</label>
        <summaryFilterItems>
            <field>Claim__c.Claim_Status__c</field>
            <operation>equals</operation>
            <value>Created, Claimable</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Co-op Activity</label>
    <listViews>
        <fullName>Activities_In_Approval</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Activity_Expire_Date__c</columns>
        <columns>Reimbursement_Amount_Requested__c</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Activities Submitted for Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Status__c</columns>
        <columns>Reimbursement_Amount_Requested__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Activity_Expire_Date__c</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Activites</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Activity_Expire_Date__c</columns>
        <columns>Reimbursement_Amount_Requested__c</columns>
        <columns>Activity_Approved_Amount__c</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Activites</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cancelled_Activities</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Activity_Expire_Date__c</columns>
        <columns>Reimbursement_Amount_Requested__c</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Claimable_Activities</fullName>
        <columns>NAME</columns>
        <columns>Activity_Expire_Date__c</columns>
        <columns>Reimbursement_Amount_Requested__c</columns>
        <columns>Activity_Approved_Amount__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Claimable</value>
        </filters>
        <label>Claimable Activities</label>
        <language>en_US</language>
    </listViews>
</CustomObject>